fix(front): overflow images

--- a/assets/css/modules/_formatted.scss
+++ b/assets/css/modules/_formatted.scss
@@ -106,6 +106,18 @@
     padding-left: 19px;
   }
 
+  img {
+    max-width: 990px;
+    width: auto;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+
+    @media screen and (max-width: 990px) {
+      max-width: 100vw;
+    }
+  }
+
   figure {
     padding: 0;
     margin: 30px;
@@ -131,7 +143,6 @@
     img {
       border: 4px solid #eeeeee;
       display: block;
-      width: 100%;
       &[src$='.png'],
       &[src$='.svg'] {
         border: none;
